--- a/clanok .tex
+++ b/clanok .tex
@@ -15,15 +15,14 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Vzdelávanie pomocou virtuálnej reality} 
 
-\author{Meno Priezvisko\\[2pt]
+\author{Samuel Petrík\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
 	{\small Fakulta informatiky a informačných technológií}\\
-	{\small \texttt{...@stuba.sk}}
-	}
+	{\small \texttt{xpetriks3@stuba.sk}}}
 
-\date{\small 30. september 2015} % upravte
+\date{\small 13.10. 2022} 
 
 
 
@@ -32,15 +31,12 @@
 \maketitle
 
 \begin{abstract}
-\ldots
+Virtuálna realita (VR) má v dnešnej dobe široké uplatnenie. Existujú rôzne platformy virtuálnej reality, ktoré sú v podstate podobné, no môžu mať špecifické využitie v odlišných oboroch. Celosvetovo známe je využitie virtuálnej reality v hrách. Hráč prežíva hru intenzívnejšie, má z nej lepší zážitok a dokáže robiť veci ktoré by bez VR nedokázal. A práve preto má využívanie virtuálnej reality veľký význam aj vo vzdelávaní. Študenti môžu využiť virtuálnu realitu na vizualizáciu a realizáciu projektov, štruktúr či objektov, ku ktorým nemajú prístup, alebo by ich bolo zložité zrealizovať fyzicky. Štúdium je tým obohatené o zážitok a nové zručnosti, vďaka čomu získavajú študenti väčšiu motiváciu do štúdia a učivo si vedia efektívnejšie osvojiť.
 \end{abstract}
 
 
-\section{PredUvod}
-
 \section{Úvod}
 
-Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
 \input{Example.tex}
 Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
 Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
