--- a/CV2/clanok .tex
+++ b/CV2/clanok .tex
@@ -1,6 +1,6 @@
 % Metódy inžinierskej práce
 
-\documentclass[10pt,twoside,slovak,a4paper]{coursepaper}
+\documentclass[10pt,twoside,slovak,coursepaper]{article}
 
 \usepackage[slovak]{babel}
 %\usepackage[T1]{fontenc}
@@ -9,21 +9,21 @@
 \usepackage{graphicx}
 \usepackage{url} % príkaz \url na formátovanie URL
 \usepackage{hyperref} % odkazy v texte budú aktívne (pri niektorých triedach dokumentov spôsobuje posun textu)
-\usepackage{amscd}
+
 \usepackage{cite}
-\usepackage{pdfpages}
 %\usepackage{times}
 
 \pagestyle{headings}
 
-\title{Vzdelávanie pomocou virtuálnej reality} 
+\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
 
-\author{Samuel Petrík\\[2pt]
+\author{Meno Priezvisko\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
 	{\small Fakulta informatiky a informačných technológií}\\
-	{\small \texttt{xpetriks3@stuba.sk}}}
+	{\small \texttt{...@stuba.sk}}
+	}
 
-\date{\small 13.10. 2022} 
+\date{\small 30. september 2015} % upravte
 
 
 
@@ -32,22 +32,24 @@
 \maketitle
 
 \begin{abstract}
-Virtuálna realita (VR) má v dnešnej dobe široké uplatnenie. Existujú rôzne platformy virtuálnej reality, ktoré sú v podstate podobné, no môžu mať špecifické využitie v odlišných oboroch. Celosvetovo známe je využitie virtuálnej reality v hrách. Hráč prežíva hru intenzívnejšie, má z nej lepší zážitok a dokáže robiť veci ktoré by bez VR nedokázal. A práve preto má využívanie virtuálnej reality veľký význam aj vo vzdelávaní. Študenti môžu využiť virtuálnu realitu na vizualizáciu a realizáciu projektov, štruktúr či objektov, ku ktorým nemajú prístup, alebo by ich bolo zložité zrealizovať fyzicky. Štúdium je tým obohatené o zážitok a nové zručnosti, vďaka čomu získavajú študenti väčšiu motiváciu do štúdia a učivo si vedia efektívnejšie osvojiť.
+\ldots
 \end{abstract}
+
 
 
 \section{Úvod}
 
-\input{Example.tex}
+Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
+
 Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
 Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
 Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
 Záverečné poznámky prináša časť~\ref{zaver}.
 
-
+\section{Cvičenie 1}
+\input{novy.txt}
 
 \section{Nejaká časť} \label{nejaka}
-\includepdf[pages=-]{Diagram 2022-10-13 13-11-19.pdf}
 
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
